--- a/project-backend/src/main/resources/application.properties
+++ b/project-backend/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=todolist-backend
+
+spring.data.mongodb.uri=mongodb+srv://it22026484:sQM.6b3UL.zhYEG@cluster0.pqlivpz.mongodb.net/learning_platform
