--- a/project-backend/learningplatform/src/main/resources/application.properties
+++ b/project-backend/learningplatform/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.application.name=learningplatform
+spring.data.mongodb.uri=mongodb+srv://it22026484:sQM.6b3UL.zhYEG@cluster0.pqlivpz.mongodb.net/learning_platform
