--- a/learsaprk2/src/main/resources/application.properties
+++ b/learsaprk2/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=learsaprk2
+
+
+spring.data.mongodb.uri=mongodb+srv://it22026484:1234@cluster0.pqlivpz.mongodb.net/learnspark
+spring.data.mongodb.database=learnspark
