changing port number

--- a/learsaprk2/src/main/resources/application.properties
+++ b/learsaprk2/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=learsaprk2
 
 spring.data.mongodb.uri=mongodb+srv://it22026484:1234@cluster0.pqlivpz.mongodb.net/learnspark
 spring.data.mongodb.database=learnspark
+
+server.port=8081
