added the mongoDB url and server port number in properties file

--- a/comment/src/main/resources/application.properties
+++ b/comment/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=comment
+
+
+spring.data.mongodb.uri=mongodb+srv://it22026484:1234@cluster0.pqlivpz.mongodb.net/learnspark
+spring.data.mongodb.database=learnspark
+
+server.port=8080
